--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "eslint": "^8.14.0",
+    "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.2.0"
   }
 }
