--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,26 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+			"browser": true,
+			"es2021": true
+    },
+    "extends": [
+			"eslint:recommended",
+			"plugin:react/recommended"
+    ],
+    "parserOptions": {
+			"ecmaFeatures": {
+				"jsx": true
+			},
+			"ecmaVersion": "latest",
+			"sourceType": "module"
+    },
+    "plugins": [
+      "react"
+    ],
+    "rules": {
+			"semi": ["error", "always"],
+			"quotes": ["error", "single"],
+			"indent": ["error", 2],
+			"comma-spacing": ["error", { "before": false, "after": true }],
+    },
 }
