--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^8.14.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.2.0"
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react": "^7.29.4"
   }
 }
